# mdaq-midas

./: .gitignore  .gitmodules  README.rst
addons/: mdaq-config.in  mdaq.py  mdaq.yaml
archlinux/: README
archlinux/elog/: PKGBUILD
autoconf/: .gitignore  Makefile.am  Makefile.in  autoconf.sh  cleanup  configure  configure.ac  mdaq-config.in  prepare-orig.sh  prepare-src.sh
debian/: .git-dpm  .gitignore  README.Debian  README.source  changelog  cleanup  control  copyright  daq-midas-dev-noroot.install  daq-midas-dev-root.install  daq-midas-noroot.install  daq-midas-root.install  mdaq-doc.install  mdaq-noroot.install  mdaq-root.install  mdaq.doc-base  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/autoconf/: Makefile.am  Makefile.in  configure  configure.ac
debian/patches/: debian-changes-2.3.0+r5065-1  series
doc/: .gitignore  midas-on-debian-zh-CNDL.rst
elog/: .gitignore
midas/: .gitignore
midas/addons/: mdaq.py
midas/autoconf/: .gitignore  Makefile.am  Makefile.in  README_autoconf.txt  configure  configure.ac  prepare-orig.sh  prepare-src.sh
midas/debian/: changelog  control  mdaq-doc.dirs  mdaq-doc.install  mdaq-noroot.dirs  mdaq-noroot.install  mdaq-root.dirs  mdaq.doc-base  prepare-orig.sh  rules
rome/: .gitignore
rome/debian/: .gitignore
roody/: .gitignore  Makefile
roody/addons/: main_el.cxx
roody/debian/: changelog  control  copyright  daq-roody.install  mdaq-roody.install  mdaq-rootana.install  prepare-orig.sh  prepare-src.sh
roody/debian/patches/: debian-changes-1.0+r236-1  debian-changes-1.1.0+r236-1  series
sis3100/: Makefile  README.rst
sis3100/debian/: README.Debian  changelog  control  libmvme-sis3100.dirs  libsis3100-dev.dirs  postinst  rules  sis1100-dkms.dirs  sis1100-dkms.prerm
sis3100/libsis3100/: Makefile
sis3100/libsis3100/sis3100_calls/: Makefile  sharc_utils.c  sis3100_vme_calls.c
sis3100/sis1100-2.13/: .gitignore  Makefile
sis3100/sis1100-2.13/src/: .gitignore  Makefile  compat_linux.c  compat_linux.h  pandapixel_map.h  pandapixel_rem_init.c  plx9054reg.h  psf4ad_rem_init.c  sis1100.init  sis1100_autoconf_linux.c  sis1100_ddma_map.c  sis1100_ddma_map_linux.c  sis1100_eeprom.c  sis1100_init.c  sis1100_ioctl32_linux.c  sis1100_ioctl32_linux.h  sis1100_irq.c  sis1100_irq_handler.c  sis1100_irq_thread.c  sis1100_lemo_handler.c  sis1100_open.c  sis1100_sc.h  sis1100_tmp_read.c  sis1100_transparent.c  sis1100_write.c  sis1100_write_block.c  sis1100_write_dma_linux.c  sis1100_write_loop.c  sis1100rem_front_io.c  sis3100_map.h  sis3100rem_front_io.c  sis3100rem_irq.c  sis5100_map.h  sis5100rem_irq.c
sis3100/sis1100-drv/: 00README  92-struck.rules  dkms.conf  load_module  rc-sis1100-deb  rcsis1100.txt
sis3100/sis1100-drv/src/: pandapixel_rem_irq.c  plx8311reg.h  plx9054_reset.c  plx9056_reset.c  sis1100_ctrl_rw_block.c  sis1100_ddma_startstop.c  sis1100_dma_alloc_linux.c  sis1100_dsp.c  sis1100_front_io.c  sis1100_init_remote.c  sis1100_init_sdram.c  sis1100_ioctl.c  sis1100_llseek_linux.c  sis1100_map.h  sis1100_mbx0_handler.c  sis1100_mmap.c  sis1100_pipe_linux.c  sis1100_poll.c  sis1100_read.c  sis1100_read_block.c  sis1100_read_dma.c  sis1100_read_dma_linux.c  sis1100_read_loop.c  sis1100_sc_linux.h  sis1100_sgl_map_user_linux.c  sis1100_synch_handler.c  sis1100_tmp_write.c  sis1100_write_dma.c  sis1100_write_pipe.c  sis1100rem_init.c  sis3100rem_init.c  sis5100rem_front_io.c  sis5100rem_init.c  zellvd_map.h  zellvd_rem_init.c  zellvd_rem_irq.c
